--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/rico-coder/Weather_API#readme",
   "private": true,
   "dependencies": {
+    "dotenv": "^17.2.3",
     "node-cron": "^4.2.1",
     "node-fetch": "^3.3.2"
   }
